# ppc-2025-threads-retake

./: .clang-tidy  requirements.txt
.github/workflows/: codeql.yml  labeler.yml  main.yml  nightly.yml  pages.yml  seq-ci.yml  static-analysis-pr.yml  yaml-lint.yml
docs/: requirements.txt
modules/core/task/include/: task.hpp
tasks/all/veliev_e_montecarlo/func_tests/: main.cpp
tasks/all/veliev_e_montecarlo/include/: my_funcs.hpp  ops_all.hpp  ops_seq.hpp
tasks/all/veliev_e_montecarlo/perf_tests/: main.cpp
tasks/all/veliev_e_montecarlo/src/: my_funcs.cpp  ops_all.cpp  ops_seq.cpp
tasks/omp/Ivashchuk_V_mult_crs/func_tests/: main.cpp
tasks/omp/Ivashchuk_V_mult_crs/include/: ops_omp.hpp
tasks/omp/Ivashchuk_V_mult_crs/perf_tests/: main.cpp
tasks/omp/Ivashchuk_V_mult_crs/src/: ops_omp.cpp
tasks/omp/_radix_double/: CMakeLists.txt
tasks/omp/_radix_double/func_tests/: test_radix_sort_double.cpp
tasks/omp/_radix_double/include/: radix_sort_double.hpp
tasks/omp/_radix_double/perf_tests/: perf_radix_sort_double.cpp
tasks/omp/_radix_double/src/: radix_sort_double.cpp
tasks/omp/agafeev_s_matmul_fox_algo/func_tests/: main.cpp
tasks/omp/agafeev_s_matmul_fox_algo/include/: ops_omp.hpp
tasks/omp/agafeev_s_matmul_fox_algo/perf_tests/: main.cpp
tasks/omp/agafeev_s_matmul_fox_algo/src/: ops_omp.cpp
tasks/omp/anikin_m_block_gauss/func_tests/: main.cpp
tasks/omp/anikin_m_block_gauss/include/: ops_omp.hpp
tasks/omp/anikin_m_block_gauss/perf_tests/: main.cpp
tasks/omp/anikin_m_block_gauss/src/: ops_omp.cpp
tasks/omp/budazhapova_e_qs_merge_sort/func_tests/: func_omp.cpp
tasks/omp/budazhapova_e_qs_merge_sort/include/: ops_omp_inc.hpp
tasks/omp/budazhapova_e_qs_merge_sort/perf_tests/: perf_omp.cpp
tasks/omp/budazhapova_e_qs_merge_sort/src/: ops_omp_src.cpp
tasks/omp/chastov_v_shell_sort_with_even_odd_batcher_merge/func_tests/: main.cpp
tasks/omp/chastov_v_shell_sort_with_even_odd_batcher_merge/include/: ops_omp.hpp
tasks/omp/chastov_v_shell_sort_with_even_odd_batcher_merge/perf_tests/: main.cpp
tasks/omp/chastov_v_shell_sort_with_even_odd_batcher_merge/src/: ops_omp.cpp
tasks/omp/chernova_n_cannon_matrix_mul/func_tests/: main.cpp
tasks/omp/chernova_n_cannon_matrix_mul/include/: ops_omp.hpp
tasks/omp/chernova_n_cannon_matrix_mul/perf_tests/: main.cpp
tasks/omp/chernova_n_cannon_matrix_mul/src/: ops_omp.cpp
tasks/omp/dormidontov_e_sign_sort_batcher/func_tests/: main.cpp
tasks/omp/dormidontov_e_sign_sort_batcher/include/: ops_seq.hpp
tasks/omp/yasakova_t_sort/: CMakeLists.txt
tasks/omp/yasakova_t_sort/func_tests/: radix_double_omp_gtest.cpp
tasks/omp/yasakova_t_sort/include/: radix_double_omp.hpp
tasks/omp/yasakova_t_sort/perf_tests/: perf_omp.cpp
tasks/omp/yasakova_t_sort/src/: radix_double_omp.cpp
tasks/seq/yasakova_t_sort/: CMakeLists.txt
tasks/seq/yasakova_t_sort/func_tests/: radix_double_seq_gtest.cpp
tasks/seq/yasakova_t_sort/include/: radix_double_seq.hpp
tasks/seq/yasakova_t_sort/perf_tests/: perf_seq.cpp
tasks/seq/yasakova_t_sort/src/: radix_double_seq.cpp
tasks/stl/yasakova_t_sort/: CMakeLists.txt
tasks/stl/yasakova_t_sort/func_tests/: radix_double_stl_gtest.cpp
tasks/stl/yasakova_t_sort/include/: radix_double_stl.hpp
tasks/stl/yasakova_t_sort/perf_tests/: perf_stl.cpp
tasks/stl/yasakova_t_sort/src/: radix_double_stl.cpp
tasks/tbb/: main.cpp  ops_tbb.cpp  ops_tbb.hpp  runner.cpp
tasks/tbb/yasakova_t_sort/: CMakeLists.txt
tasks/tbb/yasakova_t_sort/func_tests/: radix_double_tbb_gtest.cpp
tasks/tbb/yasakova_t_sort/include/: radix_double_tbb.hpp
tasks/tbb/yasakova_t_sort/perf_tests/: perf_tbb.cpp
tasks/tbb/yasakova_t_sort/src/: radix_double_tbb.cpp
(+405 files in other folders)
